--- a/public/shuffle-privacy.html
+++ b/public/shuffle-privacy.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ari" />
 
 
-<meta name="date" content="2022-06-19" />
+<meta name="date" content="2022-06-21" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -31,7 +31,7 @@
   
   
 <link rel="prev" href="simulation-for-mpc.html"/>
-<link rel="next" href="the-hybrid-argument.html"/>
+
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -174,19 +174,6 @@ div.csl-indent {
 <li class="chapter" data-level="5.4" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html#covert-ot"><i class="fa fa-check"></i><b>5.4</b> Covert OT</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="shuffle-privacy.html"><a href="shuffle-privacy.html"><i class="fa fa-check"></i><b>6</b> Shuffle Privacy</a></li>
-<li class="chapter" data-level="7" data-path="the-hybrid-argument.html"><a href="the-hybrid-argument.html"><i class="fa fa-check"></i><b>7</b> The Hybrid Argument</a></li>
-<li class="chapter" data-level="8" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html"><i class="fa fa-check"></i><b>8</b> (Solutions) Foundations of Cryptography: Preliminaries</a>
-<ul>
-<li class="chapter" data-level="8.1" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-1"><i class="fa fa-check"></i><b>8.1</b> Problem 1</a></li>
-<li class="chapter" data-level="8.2" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-2"><i class="fa fa-check"></i><b>8.2</b> Problem 2</a></li>
-<li class="chapter" data-level="8.3" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-3"><i class="fa fa-check"></i><b>8.3</b> Problem 3</a></li>
-<li class="chapter" data-level="8.4" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-4"><i class="fa fa-check"></i><b>8.4</b> Problem 4</a></li>
-<li class="chapter" data-level="8.5" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-5"><i class="fa fa-check"></i><b>8.5</b> Problem 5</a></li>
-<li class="chapter" data-level="8.6" data-path="solutions-foundations-of-cryptography-preliminaries.html"><a href="solutions-foundations-of-cryptography-preliminaries.html#problem-6"><i class="fa fa-check"></i><b>8.6</b> Problem 6</a></li>
-</ul></li>
-<li class="chapter" data-level="9" data-path="solutions-foundations-of-cryptography-one-way-functions.html"><a href="solutions-foundations-of-cryptography-one-way-functions.html"><i class="fa fa-check"></i><b>9</b> (Solutions) Foundations of Cryptography: One Way Functions</a></li>
-<li class="chapter" data-level="10" data-path="solutions-foundations-of-cryptography-pseudo-randomness.html"><a href="solutions-foundations-of-cryptography-pseudo-randomness.html"><i class="fa fa-check"></i><b>10</b> (Solutions) Foundations of Cryptography: Pseudo randomness</a></li>
-<li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/abiswas3/Humphrey/" target="blank">Meh</a></li>
 
@@ -212,14 +199,38 @@ div.csl-indent {
 <p><code>#differential_privacy</code></p>
 <p>My notes on shuffle privacy.</p>
 
+<div id="refs" class="references csl-bib-body hanging-indent">
+<div class="csl-entry">
+Ghazi, Badih, Noah Golowich, Ravi Kumar, Rasmus Pagh, and Ameya Velingker. 2019. <span>“On the Power of Multiple Anonymous Messages.”</span> <em>arXiv Preprint arXiv:1908.11358</em>.
 </div>
+<div class="csl-entry">
+Goldreich, Oded. 2009. <em>Foundations of Cryptography: Volume 2, Basic Applications</em>. Cambridge university press.
+</div>
+<div class="csl-entry">
+Lindell, Yehuda. 2017. <span>“How to Simulate It–a Tutorial on the Simulation Proof Technique.”</span> <em>Tutorials on the Foundations of Cryptography</em>, 277–346.
+</div>
+<div class="csl-entry">
+Xie, Yihui. 2015. <em>Dynamic Documents with <span>R</span> and Knitr</em>. 2nd ed. Boca Raton, Florida: Chapman; Hall/CRC. <a href="http://yihui.name/knitr/">http://yihui.name/knitr/</a>.
+</div>
+<div class="csl-entry">
+———. 2022. <em>Bookdown: Authoring Books and Technical Documents with r Markdown</em>. <a href="https://CRAN.R-project.org/package=bookdown">https://CRAN.R-project.org/package=bookdown</a>.
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
             </section>
 
           </div>
         </div>
       </div>
-<a href="simulation-for-mpc.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="the-hybrid-argument.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="simulation-for-mpc.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
