--- a/public/references.html
+++ b/public/references.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ari" />
 
 
-<meta name="date" content="2022-06-19" />
+<meta name="date" content="2022-06-29" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -170,7 +170,7 @@ div.csl-indent {
 <li class="chapter" data-level="5.2.1" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html#background"><i class="fa fa-check"></i><b>5.2.1</b> Background</a></li>
 <li class="chapter" data-level="5.2.2" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html#protocol"><i class="fa fa-check"></i><b>5.2.2</b> Protocol</a></li>
 </ul></li>
-<li class="chapter" data-level="5.3" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html#malicious-ot"><i class="fa fa-check"></i><b>5.3</b> Malicious OT</a></li>
+<li class="chapter" data-level="5.3" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html#static-malicious-ppt-adversaries"><i class="fa fa-check"></i><b>5.3</b> Static Malicious PPT Adversaries</a></li>
 <li class="chapter" data-level="5.4" data-path="simulation-for-mpc.html"><a href="simulation-for-mpc.html#covert-ot"><i class="fa fa-check"></i><b>5.4</b> Covert OT</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="shuffle-privacy.html"><a href="shuffle-privacy.html"><i class="fa fa-check"></i><b>6</b> Shuffle Privacy</a></li>
@@ -212,10 +212,16 @@ div.csl-indent {
 
 <div id="refs" class="references csl-bib-body hanging-indent">
 <div class="csl-entry">
+Aumann, Yonatan, and Yehuda Lindell. 2010. <span>“Security Against Covert Adversaries: Efficient Protocols for Realistic Adversaries.”</span> <em>Journal of Cryptology</em> 23 (2): 281–343.
+</div>
+<div class="csl-entry">
 Ghazi, Badih, Noah Golowich, Ravi Kumar, Rasmus Pagh, and Ameya Velingker. 2019. <span>“On the Power of Multiple Anonymous Messages.”</span> <em>arXiv Preprint arXiv:1908.11358</em>.
 </div>
 <div class="csl-entry">
 Goldreich, Oded. 2004. <em>Foundations of Cryptography, Volume 2</em>. Cambridge university press Cambridge.
+</div>
+<div class="csl-entry">
+———. 2009. <em>Foundations of Cryptography: Volume 2, Basic Applications</em>. Cambridge university press.
 </div>
 <div class="csl-entry">
 Lindell, Yehuda. 2017. <span>“How to Simulate It–a Tutorial on the Simulation Proof Technique.”</span> <em>Tutorials on the Foundations of Cryptography</em>, 277–346.
@@ -231,6 +237,13 @@ Xie, Yihui. 2015. <em>Dynamic Documents with <span>R</span> and Knitr</em>. 2nd 
 </div>
 </div>
 </div>
+
+
+
+
+
+
+
             </section>
 
           </div>
